--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
     margin: 0%;
 }
 .container {
-    background-color: #04B2D9;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -16,39 +15,51 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif
 }
 .header{
-    background-image: url("./image/netcode3.jpg");
+    background-image: url("./image/code.jpg");
     background-position:center;
     background-repeat: no-repeat;
     background-size:cover;
-    height: 330px;
+    height: 370px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:flex-end;
 }
 .title{
     text-align: center;
     color: white;
     font-size:70px;
-    
+    margin-bottom: 15px;
+    text-shadow: 4px 5px 6px black;
 }
 .subtitle{
     text-align: center;
-    color: rgb(119, 118, 118);
+    color: rgb(162, 162, 162);
     font-style: oblique;
-
+    font-size: 30px;
+    margin-bottom: 70px;
+    text-shadow: 2px 2px 2px black, 0 0 1em white, 0 0 0.2em gray;
 }
 .title-nav{
     text-align: center;
 }
-
-.contenido{
-    background-color: #022873;
-    margin-top: 30px;
-    margin-bottom:10px ;
-    padding: 5px;
+.grid {
+    display: grid;
+    grid-column: auto;
 }
+.contenido{
+    background-color: #0f1d3a;
+    padding: 5px;
+    color: white;
+    box-shadow: 2px 2px 10px black;
+}
+.contenido:hover{
+    background-color: #1b2f55;
+    transition:background-color 1s 0s ease-in-out ;
+    
+}
+
 .skill-content{
-    background-color: #048ABF;
+    background-color: #1b2f55;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -60,6 +71,10 @@ body{
     align-items: center;
     width: 120px;
     height: 120px;
+    margin: 2% 10% 2% 10%;
+    background-color: #254682;
+    border-radius: 5px;
+    box-shadow: 1px 1px 15px #00040D;
 }
 .php-icon{
     color: darkblue;
@@ -88,7 +103,7 @@ body{
     color: purple
 }
 .english-icon{
-    color: darkslategrey
+    color: rgb(31, 34, 34)
 }
 .footer{
     background-color: #00040D;
@@ -99,4 +114,45 @@ body{
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
+
+}
+.contact-content{
+    background-color: #1b2f55;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+.icons-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.wpp-icon{
+    color:green;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-radius: 4px;
+}
+.telegram-icon{
+    color: blue;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-radius: 4px;
+}
+.mail-icon{
+    color:lightseagreen;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-radius: 4px;
+}
+.linkedin-icon{
+    color:darkblue;
+    background-color: white;
+    padding: 5px;
+    border-radius: 4px;
+}
+@media (max-width:550px) {
+    .title{font-size: 50px;}
+    .subtitle{font-size: 25px;}
 }
