--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     margin: 0%;
 }
+ /* ------------- HEADER -----------------*/
 .container {
     display: flex;
     flex-direction: column;
@@ -19,7 +20,7 @@ body{
     background-position:center;
     background-repeat: no-repeat;
     background-size:cover;
-    height: 370px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content:flex-end;
@@ -41,40 +42,214 @@ body{
 }
 .title-nav{
     text-align: center;
+    padding: 20px;
+}
+.button{
+    width: 100%;
+    border: none;
+    background-color: #0f1d3a;
+    color:whitesmoke;
+}
+.button:hover{
+    background-color: #1b2f55;
+    transition:background-color 1s 0s linear;
+    cursor: pointer;
+}
+.button-active{
+    background-color: #1b2f55;
 }
 .grid {
     display: grid;
     grid-column: auto;
 }
+
 .contenido{
     background-color: #0f1d3a;
     padding: 5px;
     color: white;
     box-shadow: 2px 2px 10px black;
+    border: none;
 }
 .contenido:hover{
     background-color: #1b2f55;
-    transition:background-color 1s 0s ease-in-out ;
+    transition:background-color 1s 0s linear ;
+}
+ /* ------------- PORTFOLIO -----------------*/
+
+.port-content{
+    background-color: #1b2f55;
+    display: none;
+    flex-direction: column;
+}
+.content-order-in-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card-port{
+    display: grid;
+    border-radius: 10px;
+    width: 40%;
+    margin: 15px 0px 15px 0px;
+    align-content: center;
+    justify-items: center;
+    background-color: #254682;
+    box-shadow: 1px 1px 15px #00040D;
+}
+.img-port{
+    width: 90%;
+    box-shadow: 1px 1px 15px #00040D;
+} 
+.img-port:hover{
+    animation: portContent 0.3s ease-in 0s;
+    animation-fill-mode: forwards;
+}
+@keyframes portContent{
+    from{transform: scale();}
+    to{transform: scale(1.05);}
+}
+.title-port{
+    font-family:'Courier New', Courier, monospace;
+}
+.card-port p {
+    padding: 5px 30px 5px 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+.line{
+    border-bottom: 1px solid whitesmoke;
+    width: 70%;
+}
+.icons-p{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,.9);
+    width: 100%;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     
 }
+.activo{
+    display: flex;
+}
+.overlay img{
+    width: 100%;  
+}
+.contenedor-img{
+    position: relative;
+    display: flex;
+    
+    justify-content: center;
+    animation: gifContent 1s ease-in;
+}
+@keyframes gifContent{
+    0%{
+        transform: scale(0.6);
+    }
+    60%{
+        transform: scale(1);
+    }
+    80%{
+        transform: scale(0.95);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+.img-icon-p{
+    width: 2.7em;
+}
+[data-detail]{ 
+    position:relative; 
+    cursor:pointer;
+    text-align: center;
+    }
+[data-detail]::before {
+    content : attr(data-detail);
+    background-color:rgba(0,0,0,.75);
+    color:white;
+    -webkit-font-smoothing: antialiased;
+    padding:10px;
+    height:auto;
+    border-radius:3px;
+    display:none;
+    position:absolute;
+    bottom:25px;
+    left:50%;
+    pointer-events: none;
+    z-index:99;
+}
+[data-detail]::after{
+    content:"";
+    height:1px;
+    width:1px;
+    border:10px solid transparent;
+    border-top-color:rgba(0,0,0,.75);
+    position:absolute;
+    bottom:4px;
+    left:50%;
+    display: none;
+}
+    [data-detail]:hover::before,
+    [data-detail]:hover::after
+    { display:block;} 
+
+ /* ------------- SKILL -----------------*/
+
 
 .skill-content{
     background-color: #1b2f55;
-    display: flex;
+    display: none;
     justify-content: space-around;
     flex-wrap: wrap;
     padding-top: 20px;
 }
+@keyframes animationOpen{
+    0%{
+        clip-path: inset(0 0 100% 0);
+    }  
+    100%{
+       
+        clip-path: inset(0 0 0 0);
+    }
+}
+
 .card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 120px;
     height: 120px;
     margin: 2% 10% 2% 10%;
     background-color: #254682;
     border-radius: 5px;
     box-shadow: 1px 1px 15px #00040D;
+}
+.card-content:hover{
+    animation:cardAnimation 0.3s ease-in 0s ;
+    animation-fill-mode: forwards;   
+}
+@keyframes cardAnimation{
+    from{
+        transform: scale();
+    }
+    to{
+        transform: scale(1.3);
+    }
 }
 .php-icon{
     color: darkblue;
@@ -105,28 +280,25 @@ body{
 .english-icon{
     color: rgb(31, 34, 34)
 }
-.footer{
-    background-color: #00040D;
-    padding: 25px;
-}
-.content-footer{
-    text-align: center;
-    color:white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
 
-}
+
+ /* ------------- CONTACT -----------------*/
+
 .contact-content{
     background-color: #1b2f55;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-}
-.icons-content{
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.icons-content{
+    align-items: center;
+    background-color: #091f49 ;
+    border-radius: 70px;
+    padding: 20px;
+    box-shadow: 1px 1px 7px black;
+    margin: 20px;
 }
 .wpp-icon{
     color:green;
@@ -152,7 +324,63 @@ body{
     padding: 5px;
     border-radius: 4px;
 }
+.icons-content:hover{
+    animation: icono 1s ease;
+}
+@keyframes icono{
+    from{
+        transform: rotate3d(0,0,0,0);
+    }
+    to {
+        transform: rotate3d(0,1,0,360deg);
+    }
+}
+
+ /* ------------- FOOTER -----------------*/
+
+.footer{
+    background-color: #00040D;
+    padding: 25px;
+}
+.content-footer{
+    text-align: center;
+    color:white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+}
+
+ /* ------------- RESPONSIVE -----------------*/
+
 @media (max-width:550px) {
     .title{font-size: 50px;}
     .subtitle{font-size: 25px;}
+    .contact-content{font-size: 13px;}
+    .card-content{
+        width: 70px;
+        height: 70px;
+        font-size: 10px;
+        margin: 1% 8% 1% 8%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .python-icon, .mysql-icon{
+        width: 35px;
+        height: 35px;
+    }
+    .content-footer{font-size: 10px;}
+    .card-port p{
+        font-size: 10px;
+        padding: 3%;
+    }
+    .card-port{width: 70%;}
+    .title-port{font-size: 15px;text-align: center;}
+    .icons-p{
+        display: grid;
+        grid-template-columns:repeat(2,15%);
+        }
+    .overlay img{
+        width: 90%;
+        max-width: 100%;
+    }
 }
