--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
  
 body{
     margin: 0%;
+    overflow-x: hidden;
 }
  /* ------------- HEADER -----------------*/
 .container {
@@ -20,29 +21,128 @@ body{
     background-position:center;
     background-repeat: no-repeat;
     background-size:cover;
-    height: 400px;
+    height: 550px;
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content:flex-end;
 }
 .title{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     color: white;
-    font-size:70px;
-    margin-bottom: 15px;
+    font-size:80px;
     text-shadow: 4px 5px 6px black;
+    position: absolute;
+    left: 20%;
+    top: -5%;
+}
+.letra {
+    animation: letrasTitle 0.7s ease-in-out;
+}
+.l2 {
+    position: absolute;
+    top:30%;
+}
+.l3 {
+    position: absolute;
+    top:60%;
+}
+.l1::first-letter,.l2::first-letter,.l3::first-letter{
+    font-size: 120px;
+    color: rgba(63, 124, 255, 0.481);
+}
+
+@keyframes letrasTitle{
+    0%{
+        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+        transform: translateY(50px);
+    }
+    50%{
+        transform: translateY(-10px);
+    }
+    75%{
+        transform: translateY(10px);
+    }
+    100%{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
 }
 .subtitle{
+    color: whitesmoke;
+    font-size: 50px;
+    position: absolute;
+    font-family:'Courier New', Courier, monospace;
+    top: 25%;
+    left: 55%;
     text-align: center;
-    color: rgb(162, 162, 162);
-    font-style: oblique;
-    font-size: 30px;
-    margin-bottom: 70px;
-    text-shadow: 2px 2px 2px black, 0 0 1em white, 0 0 0.2em gray;
+    animation: letrasSubtitle 0.6s linear;
+
 }
+@keyframes letrasSubtitle{
+    0%{
+        transform: translate(0px , -250px);
+        
+    }
+    35%{
+        transform:rotate(20deg)   
+    }
+    55%{
+        translate:translate(0px , -75px); 
+    }
+    60%{
+        transform:rotate(-15deg);
+    }
+    70%{
+        transform:translate(0px , -75px);
+
+    }
+    85%{
+        transform:rotate(10deg);     
+    }
+    90%{
+        transform:rotate(-5deg);     
+    }
+    100%{
+        transform: translate(0px , 0px);
+    }
+}
+
+.subtitle2{
+    text-align: center;
+    color: whitesmoke;
+    font-size: 25px;
+    margin-bottom: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 2px black, 3px 3px 3px rgba(255, 255, 255, 0.481), 0 0 3px gray;
+    position: relative;
+    animation: letrasSubtitle2 1s ease-out;
+}
+@keyframes letrasSubtitle2{
+    0%{
+        transform: translate(100% , 0px)rotate(10deg);
+    }
+    65%{
+        transform: translate(-10% , 0px)rotate(-5deg);
+    }
+    85%{
+        transform: translate(5% , 0px)rotate(2deg);
+    }
+    95%{
+        transform: translate(-2% , 0px)rotate(-1deg);
+    }
+    100%{
+
+    }
+}
+
 .title-nav{
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    font-family: "Poppins", sans-serif;
+    font-size: 30px;
+    letter-spacing: 7px;
+    text-transform: uppercase;
 }
 .button{
     width: 100%;
@@ -74,6 +174,8 @@ body{
     background-color: #1b2f55;
     transition:background-color 1s 0s linear ;
 }
+
+
  /* ------------- PORTFOLIO -----------------*/
 
 .port-content{
@@ -280,8 +382,39 @@ body{
 .english-icon{
     color: rgb(31, 34, 34)
 }
+ /* ------------- EXPERIENCE -----------------*/
 
-
+.exp-content{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: default;
+    box-shadow: 1px 1px 15px #00040D;
+}
+.exp-card{
+    display: grid;
+    border-radius: 10px;
+    width: 40%;
+    margin: 15px 0px 15px 0px;
+    align-items: center;
+    justify-items: center;
+    background-color: #254682;
+    box-shadow: 1px 1px 15px #00040D;
+}
+.img-exp{
+    width: 70%;
+    box-shadow: 1px 1px 15px #00040D;
+}
+.exp-card p {
+    padding: 5px 30px 5px 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+.exp-card a {
+    text-decoration: none;
+    color: white;
+}
  /* ------------- CONTACT -----------------*/
 
 .contact-content{
@@ -348,9 +481,23 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
 }
+#particles-js {
+	width:100%;
+	height:100%;
+	position:absolute;
+	background:rgba(14, 7, 38, 0.597);
+}
 
  /* ------------- RESPONSIVE -----------------*/
 
+@media (max-width:1370px) {
+    .title{font-size: 70px;}
+    .subtitle{
+        font-size: 40px;
+        left: 50%;
+    }
+
+}
 @media (max-width:550px) {
     .title{font-size: 50px;}
     .subtitle{font-size: 25px;}
