--- a/style.css
+++ b/style.css
@@ -115,20 +115,20 @@ body{
 }
 @keyframes letrasSubtitle{
     0%{
-        transform: translate(0px , -250px);
+        transform: translate(0px , -250%);
         
     }
     35%{
         transform:rotate(20deg)   
     }
     55%{
-        translate:translate(0px , -75px); 
+        translate:translate(0px , -75%); 
     }
     60%{
         transform:rotate(-15deg);
     }
     70%{
-        transform:translate(0px , -75px);
+        transform:translate(0px , -75%);
 
     }
     85%{
@@ -138,7 +138,7 @@ body{
         transform:rotate(-5deg);     
     }
     100%{
-        transform: translate(0px , 0px);
+        transform: translate(0px , 0%);
     }
 }
 
@@ -546,13 +546,8 @@ body{
     }
     .subtitle{
         font-size: 20px;
-        display: flex;
-        position: relative;
-        flex-direction: column;
-        justify-items: center;
-        align-content:center;
-        left: 0%;
-        top: 30px;
+        top: 50%;
+        left: 25%;
     }
     .subtitle2{
         font-size: 20px;
