--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body{
     font-size:20px
 }
 .l1,.l2,.l3{
-    letter-spacing: 4px;
+    letter-spacing: 2px;
 
 }
 .l2 {
@@ -660,10 +660,12 @@ body{
         width: 70px;
         height: 70px;
         top: 50%;
+        box-shadow: 2px 2px 2px 2px black;
     }
     .burbuja p {
         font-size: 13px;
         padding: 5% 0% 5% 0%;
+
     }
     .burbuja:hover {
         transform: scale(1.5);    
