--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    z-index: 99;
 }
 .activo{
     display: flex;
